--- a/src/package.xml
+++ b/src/package.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Training_Permission_Set</members>
-        <name>PermissionSet</name>
+        <members>AccountOperations</members>
+        <members>AccountOperationsTest</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>HelloSalesforce</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>AccountTrigger</members>
+        <name>ApexTrigger</name>
     </types>
     <version>42.0</version>
 </Package>
