--- a/src/package.xml
+++ b/src/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountTrigger</members>
-        <name>ApexTrigger</name>
+        <members>Custom%3A Marketing Profile</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>Security</members>
+        <name>Settings</name>
     </types>
     <version>42.0</version>
 </Package>
